[package]
name = "genpdf"
version = "0.1.0"
authors = ["Thiago Machado da Silva <swfsql@gmail.com.br>"]

[dependencies]
tera = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
error-chain = "0.11.0"
lazy_static = "0.2.9"
semver = "0.8.0"
regex = "0.2"
walkdir = "1.0.7"
log = "0.3"
env_logger = "0.4.3"
rayon = "0.9"
gfx = "0.16"
gfx_window_glutin = "0.19"
glium = { version = "0.20", default-features = true }
glutin = "0.11"
imgui = { version = "0.0.19-pre", path = "../imgui-rs/" }
imgui-gfx-renderer = { version = "0.0.19-pre", path = "../imgui-rs/imgui-gfx-renderer" }
imgui-glium-renderer = { version = "0.0.19-pre", path = "../imgui-rs/imgui-glium-renderer" }
imgui-sys = { version = "0.0.19-pre", path = "../imgui-rs/imgui-sys", features = ["gfx", "glium"] }
image = "0.18.0"

# for thai language
#chamkho = "0.1.0"