[package]
name = "genpdf"
version = "0.1.0"
authors = ["Thiago Machado da Silva <swfsql@gmail.com.br>"]

[dependencies]
tera = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
lazy_static = "0.2.9"
semver = "0.8.0"
regex = "0.2"
walkdir = "1.0.7"
log = "0.3"
env_logger = "0.4.3"
rayon = "0.9"
image = "0.18.0"
failure = "0.1.5"

# for thai language
#chamkho = "0.1.0"